add input buffer, still getting beat by GC